stock trend apply